infra/k8s/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
    name: nginx-gateway
    namespace: prod
spec:
    selector:
        istio: ingressgateway
    servers:
        - port:
              number: 80
              name: http
              protocol: HTTP
          hosts:
              - "*"
