infra/k8s/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
    name: nginx-vs
    namespace: prod
spec:
    hosts:
        - "*"
    gateways:
        - nginx-gateway
    http:
        - route:
              - destination:
                    host: nginx-deployment
                    port:
                        number: 80
